--- a/MyStyle.css
+++ b/MyStyle.css
@@ -23,7 +23,7 @@
   }
   li a{text-decoration:none}
   li a:link{color:white}  
-  li a:hover{color:red;text-decoration:underline;text-shadow:1px 1px 5px yellowgreen;}
+  li a:hover{color:gold;text-decoration:underline;text-shadow:1px 1px 5px yellowgreen;}
   li a:active{color:goldenrod}
   li a:visited{color:white}
   #sign{
@@ -32,12 +32,12 @@
     background:navy;
     border-radius:20px 0;
     padding:8px;
-    box-shadow:5px 5px 8px black;
+    box-shadow:3px 3px 7px black;
     text-decoration:none;
     color:lightblue;
   }
   #sign:hover{background-color:blue;color:gold}
-  #sign:active{box-shadow:5px 3px 8px black;}  
+  #sign:active{box-shadow:2px 2px 5px black;}  
   #download{
     margin:20px;
     background-color:navy;
@@ -45,24 +45,25 @@
     border:2px outset gold;
     border-radius:50px;
     padding:15px 20px;
-    box-shadow:8px 8px 8px black;
+    box-shadow:6px 6px 8px black;
     text-decoration:none;}
   #download:hover{
     background-color:blue;
     color:gold;
     border:2px inset goldenrod;}
   #download:active{
-    box-shadow:5px 5px 8px black;
+    box-shadow:4px 4px 5px black;
     border:2px groove gold;}
   #phone{
     width:400px;
     margin-left:50px;
     margin-top:147px;
-    position:fixed;
+    position:absolute;
     } 
   div{
     color:white;
-    margin:80px;position:fixed;
+    margin:80px;
+    position:fixed;
     width:500px;
     right:250px;
     padding:20px;
@@ -78,11 +79,10 @@
     line-height:100px}
     p{
      color:rgb(110, 169, 247);
-     text-shadow:1px 1px 1px black;
+     text-shadow:1px 1px 2px black;
      position:fixed;
     text-align:center;
     margin:auto;
      bottom:20px;
      left:400px;
-     width:640px;
     }
