--- a/MyStyle.css
+++ b/MyStyle.css
@@ -1,32 +1,83 @@
-  *{font-family:Verdana;font-size:20px;}
-  #background{
-    position:fixed;
-    width:100%;
-    left:0;
-    top:0;
-    height:85%;
-    z-index:-1;
-    opacity:0.8;
-    border-bottom:2px solid black;
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+  
+body
+{
+    font-family:Verdana;
+    font-size:20px;
+    margin: 0;
+}
+#TopContainer
+  {
+    height: 300px;
+    background-image: url("Background3.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    margin: 0;
+    width: 100%;
+    height: 600px;
   }
-  ul{
-    position:fixed;
-    right:250px;
+.page-width
+  {
+    max-width: 900px;
+    margin: auto;
+  }
+
+#TopNavBar ul{
+    list-style: none;
     box-shadow:5px 5px 8px black;
     border-radius:20px;
     background:rgba(72, 72, 190, 0.3);
     padding:10px;
   }
-  li{
-    display:inline;
+#TopNavBar ul li{
     padding:20px;
+    display: inline;
   }
-  li a{text-decoration:none}
-  li a:link{color:white}  
-  li a:hover{color:gold;text-decoration:underline;text-shadow:1px 1px 5px yellowgreen;}
-  li a:active{color:goldenrod}
-  li a:visited{color:white}
-  #sign{
+#TopNavBar ul li a{text-decoration:none}
+#TopNavBar ul li a:link{color:white}  
+#TopNavBar ul li a:hover{color:gold;text-decoration:underline;text-shadow:1px 1px 5px yellowgreen;}
+#TopNavBar ul li a:active{color:goldenrod}
+#TopNavBar ul li a:visited{color:white}
+
+#TopAreaBody
+{
+  margin-top: 55px;
+}
+#TopAreaBody .content-block
+{
+  float: left;
+}
+.main-msg
+{
+  width: 400px;
+  margin-left: 40px;
+}
+
+#sign{
     float:right;
     margin:20px;
     background:navy;
@@ -55,34 +106,22 @@
     box-shadow:4px 4px 5px black;
     border:2px groove gold;}
   #phone{
-    width:400px;
-    margin-left:50px;
-    margin-top:147px;
-    position:absolute;
-    } 
-  div{
-    color:white;
-    margin:80px;
-    position:fixed;
-    width:500px;
-    right:250px;
-    padding:20px;
-    text-align:center;
-    }
+    width: 250px;
+  } 
   h1{
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-style:oblique;
     font-size: 40px;
     letter-spacing:5px;
     word-spacing: 10px;
-    text-shadow:3px 3px 5px black;
-    line-height:100px}
-    p{
-     color:rgb(110, 169, 247);
-     text-shadow:1px 1px 2px black;
-     position:fixed;
-    text-align:center;
-    margin:auto;
-     bottom:20px;
-     left:400px;
-    }
+    color: #ffffff;
+  }
+  /* Body Section */
+  #BodySection
+  {
+    padding-top: 40px;
+  } 
+  #BodySection .wrapper
+  {
+    height: 400px;
+  }
